# proofit

./: .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  action.yml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: dogfooding.yml
proofit/: __main__.py
