[metadata]
name = proofit
url = https://github.com/pycontribs/proofit
project_urls =
    Bug Tracker = https://github.com/pycontribs/proofit/issues
    Release Management = https://github.com/pycontribs/proofit/releases
    Source Code = https://github.com/pycontribs/proofit
description = proofit
long_description = file: README.md
long_description_content_type = text/markdown
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    proofit
    github
    action

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
    = lib
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

install_requires =
    pygithub>=1.47
    pyyaml

[options.entry_points]
console_scripts =
    proofit = proofit.__main__:main

[options.extras_require]
test =
    pytest
    pytest-plus

[options.packages.find]
where = lib
